# mnist-demo

./: .gitignore  AGENTS.md  README.md  app.py  layers.py  main.py  pyproject.toml
