[project]
name = "mnist-demo"
version = "0.1.0"
description = "A 'Hello World' in the field of machine learning, it was one of my practice projects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
